Fix for MailSending as shifted to SendGrid from SMTP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,12 +31,17 @@ frontend.url=${frontendUrl}
 #spring.ai.ollama.chat.model=mistral
 #spring.ai.ollama.chat.options.temperature=0.3
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${EMail_UserName}
-spring.mail.password=${EMail_App_Password}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=465
+#spring.mail.username=${EMail_UserName}
+#spring.mail.password=${EMail_App_Password}
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+
+# SendGrid Configuration
+sendgrid.api.key=${SENDGRID_API_KEY}
+sendgrid.from.email=${SENDGRID_FROM_EMAIL}
+sendgrid.from.name=Secure Notes
 
 # Groq API Configuration
 spring.ai.openai.enabled=true
