Fix for MailSending as shifted to Brevo from SendGrid due to Quota issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,9 +39,14 @@ frontend.url=${frontendUrl}
 #spring.mail.properties.mail.smtp.starttls.enable=true
 
 # SendGrid Configuration
-sendgrid.api.key=${SENDGRID_API_KEY}
-sendgrid.from.email=${SENDGRID_FROM_EMAIL}
-sendgrid.from.name=Secure Notes
+#sendgrid.api.key=${SENDGRID_API_KEY}
+#sendgrid.from.email=${SENDGRID_FROM_EMAIL}
+#sendgrid.from.name=Secure Notes
+
+# Brevo (Sendinblue) Configuration
+brevo.api.key=${BREVO_API_KEY}
+brevo.from.email=${BREVO_FROM_EMAIL}
+brevo.from.name=Secure Notes
 
 # Groq API Configuration
 spring.ai.openai.enabled=true
