--- a/pom.xml
+++ b/pom.xml
@@ -122,10 +122,15 @@
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>com.sendgrid</groupId>-->
+<!--            <artifactId>sendgrid-java</artifactId>-->
+<!--            <version>4.10.2</version>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>com.sendgrid</groupId>
-            <artifactId>sendgrid-java</artifactId>
-            <version>4.10.2</version>
+            <groupId>com.sendinblue</groupId>
+            <artifactId>sib-api-v3-sdk</artifactId>
+            <version>6.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.retry</groupId>
